syntax = "proto3";

package protos;

service Distsort {
  rpc WorkerReady (ReadyRequest) returns (ReadyReply) {}
  // Server-Side Streaming for Key Range
  rpc KeyRange (KeyRangeRequest) returns (KeyRangeReply) {}
  
  // rpc Partition (PartitionRequest) returns (PartitionReply) {}

  rpc SortFinish (SortFinishRequest) returns (SortFinishReply) {}
}

message ReadyRequest {
  string workerName = 1;
}

message ReadyReply {}

message KeyRangeRequest {
  int32 numSamples = 1;
  repeated bytes samples = 2;
}

message KeyRangeReply {
  repeated bytes keyList = 1;
  repeated string workerIpAddressList = 2;
}

// message PartitionRequest {
//   string workerIpAddress = 1;
//   repeated bytes data = 2;
// }

// message PartitionReply {
//   repeated bytes data = 1;
// }

message SortFinishRequest {}

message SortFinishReply {}